# quxtible

./: .gitignore  Cargo.toml  README.md
crates/quxtible-core/: Cargo.toml
crates/quxtible-core/src/: database.rs  lib.rs  phase1_cost_estimation.rs  phase2_llm_refinement.rs  phase3_batch_optimization.rs  phase4_autonomous_tuning.rs  phase4_db_tuning.rs  semantic_search.rs  types.rs
crates/quxtible-service/: Cargo.toml
crates/quxtible-service/src/: config.rs  error.rs  handlers.rs  health.rs  main.rs  metrics.rs  state.rs  validation.rs
